# xray-core

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rsync.txt
scripts/: update-vendor.sh
src/: lib.rs
